--- a/Lesson 5/revision.html
+++ b/Lesson 5/revision.html
@@ -14,9 +14,9 @@
     <input type="text" name="last name" id="last name" required>
     <br><p></p>
     <label for="gender">Male:</label>
-    <input type="radio" name="MALE">
+    <input type="radio" name="Male">
     <label for="gender">Female:</label>
-    <input type="radio" name="FEMALE">
+    <input type="radio" name="Female">
     <label for="address">Address:</label>
     <input type="text" name="address" id="address" required>
     <br>
